pkl/tests/invalid/missingDependency.pkl
amends "forbiddenCapability.pkl"

actors {
  new Actor {
    id = "actor.dagger"
    kind = "dagger-function"
    description = "Executor"
    allowedCapabilities {
      "cap.run"
    }
  }
}

plans {
  new WorkPlan {
    id = "plan.demo"
    project = "project.demo"
    scope = "scope.local"
    tasks {
      new Task {
        id = "task.one"
        taskwarriorUuid = "11111111-1111-4111-8111-111111111111"
        description = "first"
        project = "project.demo"
        actor = "actor.dagger"
        capability = "cap.run"
        dependsOn {
          "task.missing"
        }
      }
    }
  }
}
